<?xml version="1.0"?>
<package format="2">
  <name>async_comm</name>
  <version>0.2.1</version>
  <description>A C++ library for asynchronous serial communication</description>

  <maintainer email="danielpkoch@gmail.com">Daniel Koch</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/dpkoch/async_comm</url>
  <url type="bugtracker">https://github.com/dpkoch/async_comm/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
